# fts-master-server

./: .gitignore  CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  ClientsManager.cpp  ClientsManager.h  GameManager.cpp  GameManager.h  GetOpt.cpp  GetOpt.h  IClientsManager.h  INSTALL  Mutex.cpp  Mutex.h  Server.cpp  Server.h  Singleton.h  channel.cpp  channel.h  client.cpp  client.h  config.h.in  connection_waiter.h  constants.h  db.cpp  db.h  db_build.cpp  dummy_types.cpp  dummy_types.h  game.cpp  game.h  main.cpp  socket_connection_waiter.cpp  socket_connection_waiter.h
TestServer/: TestServer.cpp  TestServer.sln  TestServer.vcxproj  TestServer.vcxproj.filters  channel_test.rb  client.rb  client_nologin_test.rb  fts_connection.rb  fts_packets.rb  server_test.rb  test_spammer.rb
checksum/: md5.cpp  md5.h  sha2.cpp  sha2.h
cmake/: FindMYSQL.cmake
sql/: create.sql  create_test_users.sql  update.sql
test/: CMakeLists.txt  Server_test.cpp  Singleton_test.cpp  config.h
